--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "midify",
-  "homepage": "https://s-a-m-r-a.github.io/midify/",
+  "homepage": "https://s-a-m-r-a.github.io/midify",
   "private": true,
   "version": "0.0.0",
   "type": "module",
